# mrproject

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
mkproject/: __main__.py  list.py  new.py  utils.py
mkproject/templates/default/: README.md  mkproject_template.toml
mkproject/templates/default/MKPROJECT_PROJECT_NAME/: .gitignore  LICENSE  pyproject.toml
mkproject/templates/default/MKPROJECT_PROJECT_NAME/tests/: test_utils.py
mrproject/: __main__.py  list.py  new.py  utils.py
mrproject/templates/default/: README.md  mrproject_template.toml
mrproject/templates/default/MRPROJECT_PROJECT_NAME/: README.md  mkdocs.yml
mrproject/templates/default/MRPROJECT_PROJECT_NAME/MRPROJECT_PROJECT_NAME/: utils.py
mrproject/templates/default/MRPROJECT_PROJECT_NAME/docs/api/: utils.md
mrproject/templates/default/MRPROJECT_PROJECT_NAME/tests/: test_utils.py
tests/: conftest.py  test_new.py  test_new_default_template.py
